--- a/Minggu2/Tugas/style.css
+++ b/Minggu2/Tugas/style.css
@@ -7,8 +7,8 @@ body {
 }
 section {
     padding: 0 100px;
-    background: url(Image/556509.jpg);
-    height: 150vh;
+    background: url(gambar/bg1.png);
+    height: 100vh;
     display: flex;
     align-items: center;
 }
